Fix movie trailer player width on mobile

--- a/src/blocks/interactive/video-player/style.css
+++ b/src/blocks/interactive/video-player/style.css
@@ -34,4 +34,5 @@
 
 .wpmovies-video-wrapper iframe { 
 	border: none;
+	max-width: 100vw;
 }
